# LevSeEn

./: .gitignore  CMakeLists.txt  builld-web.sh
include/: SearchEngine.h  SearchEngine.hpp  WebSearchEngine.h  lev.h  web.h
lib/lev/: CMakeLists.txt
lib/lev/include/: Distance.h  Filter.h  Fix.h  Levenshtein.hpp  MultiThread.h  Search.h  SearchEngine.h  SelectiveSearch.h  SizeT.h  StaticEditCosts.h  structs.h
lib/lev/src/: Distance.cpp  Filter.cpp  Fix.cpp  MultiThread.cpp  Search.cpp  SelectiveSearch.cpp  filter.cpp  fix.cpp  getDistance.cpp  lookFor.cpp  purify.cpp  search.cpp  searchPattern.cpp
lib/lev/src/old/: getDistance.cpp
lib/lev/test/: CMakeLists.txt  main.cpp
lib/lev/test/include/: converters.h  utils.h
lib/lev/test/src/: DistanceTest.cpp  FilterTest.cpp  FixTest.cpp  SearchEngineTest.cpp  SearchTest.cpp  SelectiveSearchTest.cpp  converters.cpp  utils.cpp
lib/lev/web/: CMakeLists.txt  builld-web.sh
public/: index.html  interface.js
src/: main.cpp  tests.cpp  web.cpp
web/: CMakeLists.txt  builld-web.sh
web/public/: index.html
